--- a/style.css
+++ b/style.css
@@ -20,7 +20,8 @@
     color: var(--neutral-desaturated-blue);
 }
 
-body {
+
+main {
     font-size: 16px;
     background-color: var(--primary-light);
     text-align: center;
@@ -33,6 +34,12 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
+}
+
+@media (min-width: 768px) {
+    main {
+        background-image: url("./images/pattern-background-desktop.svg");
+    }
 }
 
 .container {
